# boofun

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DECISIONS.html  BooleanFunc.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  DEVELOPMENT_SUMMARY.md  Dockerfile  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  STYLE_GUIDE.html  STYLE_GUIDE.md  TESTING_SUMMARY.md  TEST_GUIDELINES.html  architecture.html  codecov.yml  comparison_guide.html  cross_validation.html  demo.py  docker-compose.yml  error_handling.html  genindex.html  index.html  library.py  mutmut_config.py  mypy-baseline.txt  objects.inv  performance.html  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.cfg
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  math_error.yml
.github/workflows/: ci.yml  codeql.yml  fuzz.yml  scorecard.yml
_modules/: boofun.html  index.html
_modules/boofun/: analysis.html  api.html  quantum.html  quantum_complexity.html  testing.html  visualization.html
_sources/: ARCHITECTURE_DECISIONS.md.txt  CONTRIBUTING.md.txt  STYLE_GUIDE.md.txt  TEST_GUIDELINES.md.txt  architecture.md.txt  comparison_guide.md.txt  index.rst.txt  performance.md.txt  quickstart.rst.txt
_sources/api/: boofun.analysis.basic_properties.rst.txt  boofun.analysis.canalization.rst.txt  boofun.analysis.certificates.rst.txt  boofun.analysis.communication_complexity.rst.txt  boofun.analysis.complexity.rst.txt  boofun.analysis.decision_trees.rst.txt  boofun.analysis.equivalence.rst.txt  boofun.analysis.fkn.rst.txt  boofun.analysis.fourier.rst.txt  boofun.analysis.gaussian.rst.txt  boofun.analysis.global_hypercontractivity.rst.txt  boofun.analysis.huang.rst.txt  boofun.analysis.hypercontractivity.rst.txt  boofun.analysis.invariance.rst.txt  boofun.analysis.learning.rst.txt  boofun.analysis.p_biased.rst.txt  boofun.analysis.pac_learning.rst.txt  boofun.analysis.sampling.rst.txt  boofun.analysis.sensitivity.rst.txt  boofun.analysis.sparsity.rst.txt  boofun.api.rst.txt  (+42 more)
api/: boofun.analysis.arrow.html  boofun.analysis.basic_properties.html  boofun.analysis.block_sensitivity.html  boofun.analysis.canalization.html  boofun.analysis.certificates.html  boofun.analysis.communication_complexity.html  boofun.analysis.complexity.html  boofun.analysis.cryptographic.html  boofun.analysis.decision_trees.html  boofun.analysis.equivalence.html  boofun.analysis.fkn.html  boofun.analysis.fourier.html  boofun.analysis.gaussian.html  boofun.analysis.gf2.html  boofun.analysis.global_hypercontractivity.html  boofun.analysis.html  boofun.analysis.huang.html  boofun.analysis.hypercontractivity.html  boofun.analysis.invariance.html  boofun.analysis.learning.html  boofun.analysis.ltf_analysis.html  boofun.analysis.p_biased.html  boofun.analysis.pac_learning.html  boofun.analysis.query_complexity.html  boofun.analysis.restrictions.html  boofun.analysis.sampling.html  boofun.analysis.sensitivity.html  boofun.analysis.sparsity.html  boofun.analysis.symmetry.html  boofun.api.html  boofun.benchmarks.html  boofun.core.adapters.html  boofun.core.auto_representation.html  boofun.core.base.html  boofun.core.batch_processing.html  boofun.core.builtins.html  boofun.core.conversion_graph.html  boofun.core.errormodels.html  boofun.core.factory.html  boofun.core.gpu.html  (+48 more)
conda-recipe/: meta.yaml
docs/: ARCHITECTURE_DECISIONS.md  CONTRIBUTING.md  STYLE_GUIDE.md  TEST_GUIDELINES.md  architecture.md  comparison_guide.md  conf.py  cross_validation.md  error_handling.md  generate_architecture_diagram.py  index.rst  performance.md  quickstart.rst
examples/: 01_getting_started.py  02_fourier_basics.py  03_common_families.py  04_property_testing.py  05_query_complexity.py  06_noise_stability.py  07_quantum_applications.py  08_cryptographic_analysis.py  09_partial_functions.py  10_sensitivity_decision_trees.py  README.html  README.md  advanced_analysis.py  advanced_features_demo.py  complete_demo.py  educational_examples.py  feature_selection.html  quantum_analysis_demo.py  representations_demo.py  sbox_analysis.html  usage.py  visualization_examples.py  voting_analysis.html
guides/: advanced.html  cryptographic.html  families.html  hypercontractivity.html  learning.html  migration_from_tal.html  operations.html  probabilistic.html  query_complexity.html  representations.html  spectral_analysis.html
notebooks/: asymptotic_visualization.html  asymptotic_visualization.ipynb  boolean_functions_as_random_variables.html  boolean_functions_as_random_variables.ipynb  cryptographic_analysis.html  cryptographic_analysis.ipynb  error_models.html  error_models.ipynb  flexible_inputs_and_oracles.html  flexible_inputs_and_oracles.ipynb  fractional_prg.html  fractional_prg.ipynb  global_hypercontractivity.html  global_hypercontractivity.ipynb  gpu_performance.html  gpu_performance.ipynb  hw1_fourier_expansion.html  hw1_fourier_expansion.ipynb  hw2_ltf_decision_trees.html  hw2_ltf_decision_trees.ipynb  hw3_dnf_restrictions.html  hw3_dnf_restrictions.ipynb  hw4_hypercontractivity.html  hw4_hypercontractivity.ipynb  lecture10_fourier_concentration.html  lecture10_fourier_concentration.ipynb  lecture11_invariance_principle.html  lecture11_invariance_principle.ipynb  lecture1_fourier_expansion.html  lecture1_fourier_expansion.ipynb  lecture2_linearity_testing.html  lecture2_linearity_testing.ipynb  lecture3_social_choice_influences.html  lecture3_social_choice_influences.ipynb  lecture4_influences_effects.html  lecture4_influences_effects.ipynb  lecture5_noise_stability.html  lecture5_noise_stability.ipynb  lecture6_spectral_concentration.html  lecture6_spectral_concentration.ipynb  (+10 more)
scripts/: profile_performance.py  run_mutation_tests.py
tests/: test_advanced_features.py  test_api.py  test_canalization.py  test_cross_validation.py  test_families.py  test_fluent_api.py  test_fractional_prg.py  test_gpu.py  test_large_n.py  test_notebook_bugs.py  test_testing_module.py  test_theoretical_validation.py
(+517 files in other folders)
