[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boofun"
version = "0.2.0"
description = "A Python library for Boolean function analysis and spectral methods"
authors = [{name = "Gabriel Taboada", email = "gabtab@berkeley.edu"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["boolean-functions", "fourier-analysis", "spectral-analysis", "property-testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "numba>=0.56.0",  # JIT compilation for performance
]

[project.optional-dependencies]
# Additional performance optimization (for backward compatibility)
performance = [
    # numba now included by default
    "bitarray>=2.8.0",  # Memory-efficient truth tables
]
# GPU-accelerated operations (requires CUDA)
gpu = [
    "pyfwht>=0.2.0",
    # Note: CuPy must be installed separately based on CUDA version:
    # pip install cupy-cuda11x  # For CUDA 11.x
    # pip install cupy-cuda12x  # For CUDA 12.x
]
visualization = [
    "matplotlib>=3.5.0",
    "plotly>=5.0.0"
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
    "sphinx-autodoc-typehints>=1.19.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "isort>=5.12.0",
    "mutmut>=2.4.0",  # Mutation testing
    "hypothesis>=6.0.0",  # Property-based testing
]
all = [
    "boofun[performance,gpu,visualization,docs,dev]"
]

[project.urls]
Homepage = "https://github.com/GabbyTab/boofun"
Repository = "https://github.com/GabbyTab/boofun"
Issues = "https://github.com/GabbyTab/boofun/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["boofun*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks benchmark tests",
    "integration: marks integration tests",
    "property: marks property-based tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]
# To run with coverage: pytest --cov=boofun --cov-report=term-missing

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    ".tox"
]

[tool.coverage.run]
source = ["src/boofun"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
