[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boofun"
version = "1.2.1"  # Released 2026-02-08
description = "A Python library for Boolean function analysis and spectral methods"
authors = [{name = "Gabriel Taboada", email = "gabtab@berkeley.edu"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["boolean-functions", "fourier-analysis", "spectral-analysis", "property-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
# Performance optimizations (Numba JIT, memory-efficient truth tables)
performance = [
    "numba>=0.56.0",  # JIT compilation for 2-10x speedups
    "bitarray>=2.8.0",  # Memory-efficient truth tables
]
# GPU-accelerated operations (requires CUDA)
gpu = [
    "pyfwht>=0.2.0",
    # Note: CuPy must be installed separately based on CUDA version:
    # pip install cupy-cuda11x  # For CUDA 11.x
    # pip install cupy-cuda12x  # For CUDA 12.x
]
visualization = [
    "matplotlib>=3.5.0",
    "plotly>=5.0.0"
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
    "sphinx-autodoc-typehints>=1.19.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.13,<2.4",  # Pin minor version; bump in v1.3 and fix new var-annotated errors
    "mypy-baseline>=0.7.4",
    "pre-commit>=3.0.0",
    "ruff>=0.15.22",
    "mutmut>=2.4.0",  # Mutation testing
    "hypothesis>=6.0.0",  # Property-based testing
]
all = [
    "boofun[performance,gpu,visualization,docs,dev]"
]

[project.urls]
Homepage = "https://github.com/GabbyTab/boofun"
Repository = "https://github.com/GabbyTab/boofun"
Issues = "https://github.com/GabbyTab/boofun/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["boofun*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks benchmark tests",
    "integration: marks integration tests",
    "property: marks property-based tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]
# To run with coverage: pytest --cov=boofun --cov-report=term-missing

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "NPY",  # NumPy-specific rules
    "RUF",  # Ruff-specific rules
    "PL",   # Pylint
]
ignore = [
    # BooFun intentionally uses local imports to break dependency cycles and
    # defer optional scientific/visualization dependencies.
    "E402",
    # Ruff's formatter owns code wrapping; E501 also flags URLs, mathematical
    # formulas, and user-facing strings that cannot be safely reformatted.
    "E501",
    "PLC0415",
    # Public interfaces, protocols, callbacks, and mathematical APIs often
    # require arguments that a particular implementation does not consume.
    "ARG001",
    "ARG002",
    "ARG003",
    "ARG004",
    "ARG005",
    # Mathematical algorithms naturally contain many branches, parameters,
    # return points, statements, and comparisons against named constants.
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    # Greek symbols and mathematical operators are intentional domain notation.
    "RUF001",
    "RUF002",
    "RUF003",
    # PathLike-compatible public APIs intentionally accept both strings and
    # pathlib objects; requiring one filesystem style adds no correctness.
    "PTH",
    # Migrating from NumPy's seeded global RNG is a behavioral API change,
    # not a lint-only transformation.
    "NPY002",
    # GPU/backend feature flags are intentionally module-global runtime state.
    "PLW0603",
    # Keep expanded conditionals when they carry mathematical explanation.
    "SIM102",
    "SIM108",
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/**/*.py" = ["E402", "E712", "RUF059", "SIM105"]
"tests/**/conftest.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_unreachable = true
# Third-party packages without stubs are isolated during the migration. This
# global escape is removed once package-specific overrides are in place.
ignore_missing_imports = true
show_error_codes = true

# Per-module overrides (only non-default settings)
[[tool.mypy.overrides]]
module = "boofun.core.optimizations"
disallow_untyped_decorators = false  # Numba decorators
warn_return_any = false

[[tool.mypy.overrides]]
module = "boofun.core.numba_optimizations"
disallow_untyped_decorators = false  # Numba decorators
warn_return_any = false

[tool.mypy-baseline]
baseline_path = "mypy-baseline.txt"
sort_baseline = true
no_colors = true

[tool.coverage.run]
source = ["src/boofun"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.mutmut]
# Mutation testing targets - focus on critical algorithmic code (mutmut 3.x config)
# Run with: mutmut run  (or restrict with a pattern, e.g. mutmut run "src.boofun.core.optimizations*")
source_paths = [
    "src/boofun/core/optimizations.py",
    "src/boofun/analysis/fourier.py",
    "src/boofun/analysis/sensitivity.py",
    "src/boofun/analysis/hypercontractivity.py",
    "src/boofun/analysis/complexity.py",
    "src/boofun/analysis/learning.py",
    "src/boofun/core/representations/truth_table.py",
    "src/boofun/core/representations/fourier_expansion.py",
]
pytest_add_cli_args_test_selection = [
    "tests/correctness/",
    "tests/property/",
    "tests/fuzz/",
]
# Skip defensive programming / type checks
do_not_mutate_patterns = [
    "raise.*Error",
    "assert ",
    "logging\\.",
    "warnings\\.warn",
    "if TYPE_CHECKING:",
]
